--- a/index.html
+++ b/index.html
@@ -29,12 +29,9 @@
 
     <div style="padding-left: 20px;">
        <p>Dear [Name],</p>
-       <p>In this paragraph, deliver a friendly and clear introduction. Introduce yourself and state the main </p>
-       <p>points of the letter here. Keep this section short and to the point.</p>
-       <p>In this paragraph, explain the importance of the main point by providing compelling and persuasive </p>
-       <p>reasoning. You can use facts, data, and other quantifiable matrics to support your clam.</p>
-       <p>In this paragraph, continue to provide background information to back up your reasons. Explain to </p>
-       <p>the addressee why/how this information is relevant to them.</p>
+       <p>In this paragraph, deliver a friendly and clear introduction. Introduce yourself and state the main points of the letter here. Keep this section short and to the point. </p>
+       <p>In this paragraph, explain the importance of the main point by providing compelling and persuasive reasoning. You can use facts, data, and other quantifiable matrics to support your clam.</p>
+       <p>In this paragraph, continue to provide background information to back up your reasons. Explain to the addressee why/how this information is relevant to them. </p>
        <p>Close by restating the main points of the letter and including a call to action.</p>
        <p>Respectfully/Sincerely,</p>
        <p>[Your Signature]</p>
