--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
     <title>LETTER</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="width: 500px;">
+<body>
     <div class="let">
-        <div class="bul">
             <h1>BUSINESS</h1>
             <h1>LETTER</h1>
-        </div>
     </div>
-    
+
+    <div class="body">
     <div class="Add">
-        <h1>Your Name</h1>
+        <h2>Your Name</h2>
         <p>Address, City, ST, Zip | Phone # | email address</p>
     </div>
 
-    <div style="padding-left: 20px;">
+    <div class="Today">
         <p style="margin-bottom: 50px;">[Today's Date]</p>
         <p>[Addressee Name]</p>
         <p>[Company Name]</p>
@@ -27,7 +26,7 @@
         <p style="margin-bottom: 50px;">[City, State, Zip]</p>
     </div>
 
-    <div style="padding-left: 20px;">
+    <div class="para">
        <p>Dear [Name],</p>
        <p>In this paragraph, deliver a friendly and clear introduction. Introduce yourself and state the main points of the letter here. Keep this section short and to the point. </p>
        <p>In this paragraph, explain the importance of the main point by providing compelling and persuasive reasoning. You can use facts, data, and other quantifiable matrics to support your clam.</p>
@@ -36,6 +35,7 @@
        <p>Respectfully/Sincerely,</p>
        <p>[Your Signature]</p>
        <p>[Your Typed Name]</p>
+    </div>
 
     </div>
 </body>
